    previous Subversion snapshot) and contestually move it to contrib/libmpcdec
    to separate from xine's own code.
  * Save plugins' cache in the defined cache home directory as per XDG Base
    Directory Specification.

xine-lib (1.1.6) [UNRELEASED]
  * Split the DirectFB plugin into X11 and non-X versions.
  * Improve the Mac OS X video output plugin. Thanks to Matt Messier.

xine-lib (1.1.5)
  * Security fixes:
    - Fix heap overflow in DMO loader. (CVE-2007-1246) [bug #1676925]
      Thanks to Kees Cook for reporting.
  * Improved PulseAudio plugin, now only one connection per instance is opened
    and the mainloop is threaded to reduce latency during playback.
  * Added XCB-based output plugins (Xv and XShm), to use in software using
    XCB to talk with the server rather than libX11 (like new Kaffeine).
    The plugins are contributed by Christoph Pfister with the help of
    Vincent Torri, Jamey Sharp and Christophe Thommeret.
  * Fix race condition in alsa audio out driver.
  * Fixed a crash in the eq2 plugin. [Bug 1644312]
  * Fixed content type detection for AAC (seekable) streams with ID3v2
    tags prefixed clobbering the preview buffer, by skipping over the tag.
  * Parse ID3v2 tags on AAC and FLAC files, as well as mp3 files.
  * Priority of the AAC encoder is now lower than anything else, so
    it's not going to crash xine down if you try to run an mp3 stream
    on FAAD2.
  * Relicense the xine-lib XML parser under the GNU LGPL, for use in other
    projects.
  * Improvement in portability to Solaris and NetBSD, thanks to Albert Lee and
    Sergey Svishchev respectively.
  * Spanish translation updated by Carlos E. Robinson M.
  * Don't leave libstk support to be detected automagically; also made it
    disabled by default as upstream is dead and a different libstk is found
    on Debian.
  * Improvement in portability to FreeBSD, merged some patches (with changes)
    from the ports.