@@ -16,6 +16,12 @@ xine-lib (1.1.90) (Unreleased)
 xine-lib (1.1.6) [UNRELEASED]
   * Split the DirectFB plugin into X11 and non-X versions.
   * Improve the Mac OS X video output plugin. Thanks to Matt Messier.
+  * Fixed the XcbXv plugin - an empty plugin would be built if "old" Xv
+    isn't detected.
+  * Reworked the channels.conf file handling in the DVB plugin. Previously,
+    with junk content, the plugin could potentially consume lots of memory
+    (possibly causing a local DoS). Also, a few small memory leaks have been
+    eliminated.
 
 xine-lib (1.1.5)
   * Security fixes:
